# telegram-client

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  core  install.sh  package.xml  telegram-desktop-setup.sh  workrules.txt
PDF/: Ablauf Teamarbeit.docx  Konflikte und Bewältigungsstrategien.odt  NLP.odt  Persönliche Rolleneinschätzung_Rohhullah.docx  Rolleneinschätzung Amir.docx  Rolleneinschätzung von Amir.docx  Rolleneinschätzung_Artjom.odt  Rolleneinschätzung_Stefan.odt  Teamarbeit - Telegram Chat Bot.docx  Teamarbeit(allgemein).docx  Technische_details.odt
Python/: Commands.txt  Message_reciever.py  Message_transmitter.py  Spacy.py  example2.py  pub_test.py  receive_message_test.ipynb  reciever.py  result.json  send_message.ipynb  spacy_test.ipynb  sub_test.py
capnproto/: message.capnp
config/: default.json
etc/: Chatbot.conf
include/: .User.h.swp  Message.h  Robot.h  User.h
include/telegram_msgs/: addressbook.capnp.c++  message.capnp  message.capnp.c++  test.capnp.c++
msg/: message.capnp  test.capnp
nlp/: Message_reciever.py  example.py  receive_message.py  send_message.py  spacy_test.ipynb  transmitter.py
src/: Message.cpp  Robot.cpp  Robot.h  TelegramBridge.cpp  User.cpp  User.h  client.cpp  msg-echo.cpp  nlp.cpp  telegram_bot  testmsg.cpp
