<?xml version="1.0"?>
<package format="2">
  <name>telegram-client</name>
  <version>0.0.0</version>
  <description>The telegram-client package</description>

  <maintainer email="lab-user@todo.todo">Stefan Schmelz</maintainer>

  <license>GPLv3</license>

  <author email="stefan_schmelz@gmx.net">Stefan Schmelz</author>

  <depend>roscpp</depend>
  <depend>capnzero</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
